@@ -1,3 +1,9 @@
+2024-07-20T12:23:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10020156675 # 722
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-07-20
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 3184 / 0 3185 / +0 +1
+
 2024-07-20T01:00:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10016250283 # 721
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-07-20
